src/main/java/com/example/solid/dip/negative/WritePrinter.java
package com.example.solid.dip.negative;

/**
 * Created by sbiliaiev on 10/02/2019.
 */
public class WritePrinter {

    public void printData(char ch){
        System.out.println("printer print [" + ch + "]");
    }

}
